--- a/application.properties
+++ b/application.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 spring.zipkin.enabled=false
 spring.application.zipkin.base-url=http://127.0.0.1:9411/
+
+kafka.bootstrapAddress=127.0.0.1:9092
